--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "keywords": [],
   "dependencies": {
+    "@elevenlabs/elevenlabs-js": "^2.33.0",
     "@google/genai": "^1.38.0",
     "@google/generative-ai": "^0.24.1",
     "bcryptjs": "^3.0.3",
