--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "nodemailer": "^7.0.12",
     "nodemon": "^3.1.11",
     "passport": "^0.7.0",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "pdf-parse": "^2.4.5"
   }
 }
