--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
     "@elevenlabs/elevenlabs-js": "^2.33.0",
     "@google/genai": "^1.38.0",
     "@google/generative-ai": "^0.24.1",
+    "@paddle/paddle-node-sdk": "^3.6.0",
     "axios": "^1.13.5",
     "bcryptjs": "^3.0.3",
     "cloudinary": "^2.9.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.6",
-    "dotenv": "^17.2.3",
+    "dotenv": "^17.3.1",
     "express": "^5.2.1",
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^8.2.1",
@@ -32,6 +33,7 @@
     "hpp": "^0.2.3",
     "joi": "^18.0.2",
     "jsonwebtoken": "^9.0.3",
+    "localtunnel": "^2.0.2",
     "mongoose": "^9.1.5",
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
