--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express-session": "^1.19.0",
     "fluent-ffmpeg": "^2.1.3",
     "get-audio-duration": "^4.0.1",
+    "ghost-cursor": "^1.4.2",
     "google-auth-library": "^10.5.0",
     "helmet": "^8.1.0",
     "hpp": "^0.2.3",
@@ -44,7 +45,10 @@
     "pdf-parse": "^2.4.5",
     "puppeteer": "^19.0.0",
     "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-adblocker": "^2.13.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2",
-    "puppeteer-screen-recorder": "^3.0.6"
+    "puppeteer-real-browser": "^1.4.4",
+    "puppeteer-screen-recorder": "^3.0.6",
+    "user-agents": "^1.1.669"
   }
 }
